<resources>
    <string name="app_name">YokenTaskManager</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="makeAdmin">Make Admin</string>
    <string name="removeAdmin">Remove Admin</string>
    <string name="admin">Admin:</string>
    <string name="join_group">Join Group</string>
    <string name="add_user">Add User</string>
    <string name="remove_user">Remove User</string>
    <string name="description">Description</string>
    <string name="task_details">TASK DETAILS</string>
    <string name="users">USERS</string>
    <string name="documents">Documents</string>
    <string name="register">Register</string>
    <string name="user_name">User Name</string>
    <string name="yoken_memo">YOKEN MEMO</string>
    <string name="new_task">NEW TASK</string>
    <string name="task_name">Task Name</string>
    <string name="what_s_it_about">What\'s it about?</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="post_anonymously">Post Anonymously.</string>
    <string name="add_task">ADD TASK</string>
    <string name="select_document">SELECT DOCUMENT</string>
    <string name="upload">UPLOAD</string>
    <string name="upload_document">UPLOAD DOCUMENT</string>
    <string name="title">Title</string>
    <string name="enter_document_name">Enter Document name</string>
    <string name="make_admin">Make Admin</string>
    <string name="tasks">TASKS</string>
    <string name="name">Name:</string>
    <string name="doc_type">DOC Type:</string>
    <string name="uploaded_by">Uploaded By</string>
    <string name="time_of_upload">Time Of Upload:</string>
    <string name="download">Download</string>
    <string name="delete">Delete</string>
    <string name="task_id">Task ID:</string>
    <string name="task_title">Task Title:</string>
    <string name="user_id">User ID:</string>
    <string name="user_Name">User Name:</string>
    <string name="enter_user_id">Enter User ID :</string>
    <string name="user_Id">User ID</string>


    <string-array name="options">
        <item>About Me</item>
        <item>Tasks</item>
        <item>Invite</item>
    </string-array>
</resources>
