<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailActivity"
    android:orientation="vertical">

    <TextView
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/task_details"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:padding="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/task_id"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/taskID"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/task_title"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/taskTitle"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_margin="4dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/taskDescription"
        android:layout_margin="4dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/admin"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/taskAdmin"
            android:layout_margin="4dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_margin="4dp"
        android:text="@string/users"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"/>

    <Button
        android:id="@+id/docs"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:visibility="gone"
        android:text="@string/documents" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/join"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/join_group" />

        <Button
            android:id="@+id/addUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/add_user" />
    </LinearLayout>

    <Button
        android:id="@+id/removeUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/remove_user" />

</LinearLayout>