<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:background="@drawable/background"
        android:textColor="@android:color/black"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/upload_document"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_document_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <Button
                android:id="@+id/docSelector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_document"
                android:padding="4dp"
                android:background="@drawable/button"
                android:textAlignment="center"
                android:textColor="#ffff" />
            <TextView
                android:layout_margin="8dp"
                android:id="@+id/docPath"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#b3e5fc"
                android:ems="10" />
        </LinearLayout>

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:text="@string/upload"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>
